added validation and improve business logic